tests/baselines/reference/arrayAssignmentTest2.errors.txt
tests/cases/compiler/arrayAssignmentTest2.ts(47,1): error TS2322: Type 'C2[]' is not assignable to type 'C3[]'.
  Type 'C2' is not assignable to type 'C3'.
    Property 'CM3M1' is missing in type 'C2'.
tests/cases/compiler/arrayAssignmentTest2.ts(48,1): error TS2322: Type 'C1[]' is not assignable to type 'C3[]'.
  Type 'C1' is not assignable to type 'C3'.
    Property 'CM3M1' is missing in type 'C1'.
tests/cases/compiler/arrayAssignmentTest2.ts(49,1): error TS2322: Type 'I1[]' is not assignable to type 'C3[]'.
  Type 'I1' is not assignable to type 'C3'.
    Property 'CM3M1' is missing in type 'I1'.
tests/cases/compiler/arrayAssignmentTest2.ts(51,1): error TS2322: Type '() => C1' is not assignable to type 'any[]'.
  Property 'push' is missing in type '() => C1'.
tests/cases/compiler/arrayAssignmentTest2.ts(52,1): error TS2322: Type '() => any' is not assignable to type 'any[]'.
  Property 'push' is missing in type '() => any'.
tests/cases/compiler/arrayAssignmentTest2.ts(53,1): error TS2322: Type '{ one: number; }' is not assignable to type 'any[]'.
  Property 'length' is missing in type '{ one: number; }'.
tests/cases/compiler/arrayAssignmentTest2.ts(55,1): error TS2322: Type 'C1' is not assignable to type 'any[]'.
  Property 'length' is missing in type 'C1'.
tests/cases/compiler/arrayAssignmentTest2.ts(56,1): error TS2322: Type 'C2' is not assignable to type 'any[]'.
  Property 'length' is missing in type 'C2'.
tests/cases/compiler/arrayAssignmentTest2.ts(57,1): error TS2322: Type 'C3' is not assignable to type 'any[]'.
  Property 'length' is missing in type 'C3'.
tests/cases/compiler/arrayAssignmentTest2.ts(58,1): error TS2322: Type 'I1' is not assignable to type 'any[]'.
  Property 'length' is missing in type 'I1'.


==== tests/cases/compiler/arrayAssignmentTest2.ts (10 errors) ====
    interface I1 {
    	IM1():void[];
    }
    
    class C1 implements I1 { 
    	IM1():void[] {return null;}
    	C1M1():C1[] {return null;}
     }
    class C2 extends C1 {
    	C2M1():C2[] { return null;}
    }
    
    class C3 {
    	CM3M1() { return 3;}
    }
    
    
    /*
    
    This behaves unexpectedly with the following types:
    
    Type 1 of any[]:
    
    * Type 2 of the following throws an error but shouldn't: () => void[], SomeClass[], and {one: 1}[].
    
    * Type 2 of the following doesn't throw an error but should: {one: 1}, new() => SomeClass, SomeClass.
    
    */
    var a1 : any = null;
    var c1 : C1 = new C1();
    var i1 : I1 = c1;
    var c2 : C2 = new C2();
    var c3 : C3 = new C3();
    var o1 = {one : 1};
    var f1 = function () { return new C1();}
    
    var arr_any: any[] = [];
    var arr_i1: I1[] = [];
    var arr_c1: C1[] = [];
    var arr_c2: C2[] = [];
    var arr_i1_2: I1[] = [];
    var arr_c1_2: C1[] = [];
    var arr_c2_2: C2[] = [];
    var arr_c3: C3[] = [];
    
    // "clean up error" occurs at this point
    arr_c3 = arr_c2_2; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'C2[]' is not assignable to type 'C3[]'.
!!! error TS2322:   Type 'C2' is not assignable to type 'C3'.
!!! error TS2322:     Property 'CM3M1' is missing in type 'C2'.
    arr_c3 = arr_c1_2; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'C1[]' is not assignable to type 'C3[]'.
!!! error TS2322:   Type 'C1' is not assignable to type 'C3'.
!!! error TS2322:     Property 'CM3M1' is missing in type 'C1'.
    arr_c3 = arr_i1_2; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'I1[]' is not assignable to type 'C3[]'.
!!! error TS2322:   Type 'I1' is not assignable to type 'C3'.
!!! error TS2322:     Property 'CM3M1' is missing in type 'I1'.
    
    arr_any = f1; // should be an error - is
    ~~~~~~~
!!! error TS2322: Type '() => C1' is not assignable to type 'any[]'.
!!! error TS2322:   Property 'push' is missing in type '() => C1'.
    arr_any = function () { return null;} // should be an error - is
    ~~~~~~~
!!! error TS2322: Type '() => any' is not assignable to type 'any[]'.
!!! error TS2322:   Property 'push' is missing in type '() => any'.
    arr_any = o1; // should be an error - is
    ~~~~~~~
!!! error TS2322: Type '{ one: number; }' is not assignable to type 'any[]'.
!!! error TS2322:   Property 'length' is missing in type '{ one: number; }'.
    arr_any = a1; // should be ok - is
    arr_any = c1; // should be an error - is
    ~~~~~~~
!!! error TS2322: Type 'C1' is not assignable to type 'any[]'.
!!! error TS2322:   Property 'length' is missing in type 'C1'.
    arr_any = c2; // should be an error - is
    ~~~~~~~
!!! error TS2322: Type 'C2' is not assignable to type 'any[]'.
!!! error TS2322:   Property 'length' is missing in type 'C2'.
    arr_any = c3; // should be an error - is
    ~~~~~~~
!!! error TS2322: Type 'C3' is not assignable to type 'any[]'.
!!! error TS2322:   Property 'length' is missing in type 'C3'.
    arr_any = i1; // should be an error - is
    ~~~~~~~
!!! error TS2322: Type 'I1' is not assignable to type 'any[]'.
!!! error TS2322:   Property 'length' is missing in type 'I1'.
    